--- a/index.html
+++ b/index.html
@@ -16,10 +16,14 @@ padding: 0;
 .container {
 width: 100%;
 background:
-url(img/menu_content_ball.png) 20% top no-repeat,
-url(img/menu_content_ball.png) 20% bottom no-repeat,
+url(img/menu_ball.png) 20% top no-repeat,
+url(img/content_ball.png) 20% top no-repeat,
+url(img/menu_ball.png) 20% bottom no-repeat,
+url(img/content_ball.png) 20% bottom no-repeat,
+url(img/content_ball_left.png) right top no-repeat,
 url(img/baner_ball.png) right top no-repeat,
 url(img/ball.png) right top no-repeat,
+url(img/content_ball_left.png) right bottom no-repeat,
 url(img/baner_ball.png) right bottom no-repeat,
 url(img/ball.png) right bottom no-repeat,
 url(img/ball.png) left top no-repeat,
